# DataHyve

./: .gitignore  README.md
.github/workflows/: cli-deployment.yml
_docs/: resources.md
_scripts/github/: delete-workflows.sh
_scripts/sql/: commands.sql  drop_all_tables.sql
cli/: pyproject.toml
cli/app/: constants.py  main.py
cli/app/snowflake/: helpers.py  streamer.py
cli/app/utils/: configfiles.py
cli/datahyve/: main.py
client/: main.py
client/utils/: snowflake.py
frontend/: config.py  main.py
