[tool.poetry]
name = "datahyve"
version = "0.1.0"
description = "Server metrics in real-time with RAG-powered insights 🚀"
authors = ["Aryan Khurana <aryankhurana1511@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
packages = [{include = "app"}]

[tool.poetry.scripts]
dh = "app.main:app"

[tool.poetry.dependencies]
python = "^3.13"
typer = "^0.15.1"
snowflake-connector-python = "^3.12.4"
toml = "^0.10.2"
python-dotenv = "^1.0.1"
psutil = "^6.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ruff = "^0.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
